<resources>
    <string name="app_name">KancaUMKM</string>

    <string-array name="carousel_titles">
        <item>Buat tokomu untuk mengembangkan bisnismu</item>
        <item>Temukan produk UMKM dengan promo dan diskon</item>
        <item>Kreator untuk membantu digitalisasi produkmu</item>
    </string-array>

    <string-array name="carousel_subtitles">
        <item>Sebagai pelaku UMKM, daftarkan tokomu dan  dapatkan bimbingan  pengembangan bisnismu!</item>
        <item>Sebagai konsumen, temukan  produk UMKM dengan  penawaran diskon  promo yang menarik!</item>
        <item>Sebagai kreator, temukan klien potensial yang memerlukan kreativitasmu!</item>
    </string-array>

    <array name="carousel_drawables">
        <item>@drawable/iv_onboarding_1</item>
        <item>@drawable/iv_onboarding_2</item>
        <item>@drawable/iv_onboarding_3</item>
    </array>

    <string name="btn_get_started">Mulai Sekarang</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_register">Daftar</string>

    <string name="to_login_alternate">Sudah memiliki akun?</string>
    <string name="to_register_alternate">Belum memiliki akun?</string>
    <string name="btn_skip">Lewati</string>

    <string name="tv_login_title">Masuk</string>
    <string name="tv_login_subtitle">Masuk dan mulai raup keuntunganmu</string>
    <string name="tv_register_title">Daftar</string>
    <string name="tv_register_subtitle">Daftarkan dirimu dan penuhi kebutuhanmu</string>

    <string name="tv_hint_email">Silahkan masukkan emailmu</string>
    <string name="tv_hint_password">Silahkan masukkan passwordmu</string>
    <string name="tv_hint_confirm_password">Silahkan konfrimasi passwordmu</string>

    <string name="tv_error_input_blank">Field ini tidak boleh kosong!</string>
    <string name="tv_error_password_mismatch">Konfirmasi password tidak cocok!</string>

    <string name="tv_pembeli_title_home">Beranda</string>
    <string name="tv_pembeli_title_premium">Toko Premium</string>
    <string name="tv_pembeli_title_riwayat">Riwayat</string>
    <string name="tv_pembeli_title_profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_hello">Hello!</string>
    <string name="tv_kategori">Kategori</string>
    <string name="tv_kerajinan">Kerajinan</string>
    <string name="tv_pakaian">Pakaian</string>
    <string name="tv_promo">Promo</string>
    <string name="tv_sepatu">Sepatu</string>
    <string name="tv_pot_tanaman">Pot Tanaman</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="tv_alat_tulis">Alat Tulis</string>
    <string name="tv_produk_umkm">Produk UMKM</string>
    <string name="tv_toko_premium">Toko Premium</string>
    <string name="tv_cari_riwayat_transaksi">Cari riwayat transaksi</string>
    <string name="tv_riwayat_transaksi">Riwayat Transaksi</string>
    <string name="tv_semua_status">Semua Status</string>
    <string name="tv_terapkan_filter">Terapkan Filter</string>


    <string-array name="id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="gambar_product">
        <item>@drawable/ic_product_1</item>
        <item>@drawable/ic_product_2</item>
        <item>@drawable/ic_product_3</item>
        <item>@drawable/ic_product_4</item>
        <item>@drawable/ic_product_5</item>
        <item>@drawable/ic_product_6</item>
        <item>@drawable/ic_product_7</item>
        <item>@drawable/ic_product_8</item>

    </string-array>

    <string-array name="namaProduk">
        <item>Topi Sulam Bentuk Hewan</item>
        <item>Pot Bunga Gantung</item>
        <item>Gelang Kerang</item>
        <item>Sepatu Enceng Gondok</item>
        <item>Pot Bunga</item>
        <item>Kemeja Pria Polkadot</item>
        <item>Sepatu Olahraga Pria</item>
        <item>Kaktus Hias</item>
    </string-array>

    <string-array name="hargaProduk">
        <item>11000</item>
        <item>20000</item>
        <item>14000</item>
        <item>14000</item>
        <item>25000</item>
        <item>19000</item>
        <item>19000</item>
        <item>20000</item>
    </string-array>

    <string-array name="lokasiProduk">
        <item>Toko Bu Khanuun, Semarang.</item>
        <item>Khanuun Art, Semarang.</item>
        <item>Toko Bu Maulida, Jepara</item>
        <item>Toko Pak Hasyim, Jepara</item>
        <item>Toko Puspita, Prambanan</item>
        <item>Toko Nanda, Semarang</item>
        <item>Nanda Sport, Semarang</item>
        <item>Iqbal Art, Kulon Progo</item>
    </string-array>


    <string-array name="id_riwayat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>

    <string-array name="gambar_product_riwayat">
        <item>@drawable/ic_product_5</item>
        <item>@drawable/ic_product_6</item>
        <item>@drawable/ic_product_7</item>
        <item>@drawable/ic_product_8</item>
    </string-array>

    <string-array name="namaProduk_riwayat">
        <item>Pot Bunga</item>
        <item>Kemeja Pria Polkadot</item>
        <item>Sepatu Olahraga Pria</item>
        <item>Kaktus Hias</item>
    </string-array>

    <string-array name="hargaProduk_riwayat">
        <item>25000</item>
        <item>19000</item>
        <item>19000</item>
        <item>20000</item>
    </string-array>

    <string-array name="tanggalProduk_riwayat">
        <item>20 Desember 2023</item>
        <item>1 Januari 2024</item>
        <item>19 Desember 2023</item>
        <item>13 Mei 2023</item>
    </string-array>

    <string-array name="statusProduk_riwayat">
        <item>Berhasil</item>
        <item>Gagal</item>
        <item>Berhasil</item>
        <item>Berhasil</item>
    </string-array>

    <string-array name="kuantitasProduk_riwayat">
        <item>1 barang</item>
        <item>2 barang</item>
        <item>1 barang</item>
        <item>1 barang</item>
    </string-array>

</resources>