<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".presentation.ui.home.pembeli.riwayat.PembeliRiwayatFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_riwayat_transaksi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/tv_cari_riwayat_transaksi"
        android:textColorHint="@color/black_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nandaiqbalh.kancaumkm.util.components.CustomEmailEditText
            android:id="@+id/ed_riwayat_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jakartasans_regular"
            android:textColor="@color/black_500"
            android:textColorHint="@color/black_300"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_riwayat_transaksi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_filter"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/tv_terapkan_filter"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_filter"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cornerRadius="8dp"
                app:strokeColor="@color/primary"/>

            <TextView
                android:id="@+id/tv_title_produk_umkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/jakartasans_bold"
                android:text="@string/tv_riwayat_transaksi"
                android:textColor="@color/black_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_cat2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_riwayat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="11sp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_produk_umkm"
                tools:listitem="@layout/item_riwayat" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

